modified for website

--- a/virola-eko/3d.html
+++ b/virola-eko/3d.html
@@ -52,7 +52,7 @@
   <div id="container">
     <div id="parent">
       <div><a href="#">#</a></div>
-      <div><a href="/">源码爱好者网站</a></div>
+      <div><a href="/">www.virola-eko.com</a></div>
     </div>
   </div>
 </body>
