--- a/virola-eko/canvas.html
+++ b/virola-eko/canvas.html
@@ -14,13 +14,9 @@
 <div class="main">
 <canvas id="Canvas" width="800" height="800">It's a little Canvas Demo, if you like it.</canvas>
 </div>
-<footer id="Footer" class="foot">&copy;2012. Virola</footer>
+<footer id="Footer" class="foot">&copy;2013. Virola</footer>
 </div>
-<script type="text/javascript" src="asset/lib.js"></script>
 <script type="text/javascript" src="asset/canvas.js"></script>
-<script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F39e6a54216ca63d253b34675c50b7fac' type='text/javascript'%3E%3C/script%3E"));
-</script>
+<script type="text/javascript" src="asset/statics.js"></script>
 </body>
 </html>
