--- a/virola-eko/filedrop.html
+++ b/virola-eko/filedrop.html
@@ -19,35 +19,36 @@ body { margin:0; padding:0; }
 <script type="text/javascript">
 
 function traverseFileTree(item, path) {
-  path = path || "";
-  if (item.isFile) {
-    // Get file
-    item.file(function(file) {
-      console.log("File:", path + file.name);
-    });
-  } else if (item.isDirectory) {
-    // Get folder contents
-    var dirReader = item.createReader();
-    dirReader.readEntries(function(entries) {
-      for (var i=0; i<entries.length; i++) {
-        traverseFileTree(entries[i], path + item.name + "/");
-      }
-    });
-  }
+    path = path || "";
+    if (item.isFile) {
+        // Get file
+        item.file(function(file) {
+            console.log("File:", path + file.name);
+        });
+    } 
+    else if (item.isDirectory) {
+        // Get folder contents
+        var dirReader = item.createReader();
+        dirReader.readEntries(function(entries) {
+            for (var i=0; i<entries.length; i++) {
+                traverseFileTree(entries[i], path + item.name + "/");
+            }
+        });
+    }
 }
 
 var dropArea = document.getElementById('DropArea');
 dropArea.addEventListener("drop", function(event) {
-  event.preventDefault();
-  
-  var items = event.dataTransfer.items;
-  for (var i=0; i<items.length; i++) {
-    // webkitGetAsEntry is where the magic happens
-    var item = items[i].webkitGetAsEntry(); // in chrome v21
-    if (item) {
-      traverseFileTree(item);
+    event.preventDefault();
+    
+    var items = event.dataTransfer.items;
+    for (var i=0; i<items.length; i++) {
+        // webkitGetAsEntry is where the magic happens
+        var item = items[i].webkitGetAsEntry(); // in chrome v21
+        if (item) {
+            traverseFileTree(item);
+        }
     }
-  }
 }, false);
 </script>
 
