--- a/virola-eko/index.html
+++ b/virola-eko/index.html
@@ -2,18 +2,16 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Virola&Eko 's Love Island</title>
+<title>Virola&amp;Eko 's Love Island</title>
 <meta name="author" content="Virola" />
-<link type="text/css" rel="stylesheet" href="asset/reset.css" />
-<link type="text/css" rel="stylesheet" href="asset/style.css" />
-<link type="text/css" rel="stylesheet" href="asset/index.css" />
+<link rel="stylesheet" href="asset/css/index.css" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
-<body id="Wrap">
+<body id="wrap">
 <nav>
     <ul class="krl">
-        <li><a href="#">7&V Love</a><span class="break">~</span></li>
+        <li><a href="#">7&amp;V Love</a><span class="break">~</span></li>
         <li><a href="#">My Minds</a><span class="break">~</span></li>
         <li><a href="#">Your Eyes</a><span class="break">~</span></li>
         <li><a href="#">Our Memories</a></li>
@@ -24,19 +22,16 @@
         <li><a href="map/">Map</a></li>
     </ul>
 </nav>
-<div id="Main">
+<div id="main">
     <div class="logo"></div><h1></h1>
 </div>
-<footer id="Footer">
-&copy;2012. Virola
+<footer id="footer">
+&copy;2013. Virola
 </footer>
 <script type="text/javascript">
 
 </script>
-<script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F39e6a54216ca63d253b34675c50b7fac' type='text/javascript'%3E%3C/script%3E"));
-</script>
 
+<script src="asset/statics.js"></script>
 </body>
 </html>
