--- a/virola-eko/index.html
+++ b/virola-eko/index.html
@@ -14,7 +14,7 @@
         <li><a href="#">7&amp;V Love</a><span class="break">~</span></li>
         <li><a href="#">My Minds</a><span class="break">~</span></li>
         <li><a href="#">Your Eyes</a><span class="break">~</span></li>
-        <li><a href="#">Our Memories</a></li>
+        <li><a href="blog/">Our Memories</a></li>
     </ul>
     <ul class="f20 krl">
         <li><a href="loveday.html">Love Day</a><span class="break">~</span></li>
