--- a/virola-eko/canvas.html
+++ b/virola-eko/canvas.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Virola&Eko 's Love Island</title>
 <meta name="author" content="Virola" /> 
-<link rel="stylesheet" href="asset/style.css" />
+<link rel="stylesheet" href="asset/canvas.css" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
