--- a/virola-eko/index.html
+++ b/virola-eko/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Virola&amp;Eko 's Love Island</title>
-<meta name="author" content="Virola" />
-<link rel="stylesheet" href="asset/css/index.css" />
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Virola&amp;Eko 's Love Island</title>
+    <meta name="author" content="Virola" />
+    <link rel="stylesheet" href="asset/css/index.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <script src="dep/html5shiv.js"></script>
 </head>
 <body id="wrap">
 <nav>
@@ -23,14 +24,26 @@
     </ul>
 </nav>
 <div id="main">
-    <div class="logo"></div><h1></h1>
+    <div class="logo"></div>
+
+    <article>
+        <hgroup><h1>Virola</h1></hgroup>
+        <dl>
+            <dt>Born in 1990</dt>
+            <dd>Gemini</dd>
+            <dt>FE</dt>
+            <dd>At Baidu</dd>
+            <dt>Outgoing</dt>
+            <dd>Maybe also a Otaku, a little~</dd>
+            <dt>Broad interests</dt>
+            <dd>Travel, Music, RPG games</dd>
+        </dl>
+    </article>
 </div>
+
 <footer id="footer">
 &copy;2013. Virola
 </footer>
-<script type="text/javascript">
-
-</script>
 
 <script src="asset/statics.js"></script>
 </body>
