--- a/virola-eko/loveday.html
+++ b/virola-eko/loveday.html
@@ -18,133 +18,130 @@
     src: url("asset/font/quilline.ttf");
 }
 body {
-background-color:#ffe2ee;
-width:100%;
-height:100%;
-margin:0;
-padding:0;
-font:12px/1.2 Kriston ITC,Consolas, Arial;
-color:#ff3399;
-text-shadow:1px 1px 0 #fff;
-overflow:hidden;
-position:relative;
+    background-color: #ffe2ee;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font: 12px/1.2 Kriston ITC,Consolas, Arial;
+    color: #ff3399;
+    text-shadow: 1px 1px 0 #fff;
+    overflow: hidden;
+    position: relative;
 }
 div, p, h1, h2 {
-margin:0;
-padding:0;
-font:inherit;
+    margin:0;
+    padding:0;
+    font:inherit;
 }
 
 article, aside, footer, header, hgroup, nav, section {
-display: block;
+    display: block;
 }
 
 .kr {
-font-family:Kriston ITC,Consolas, Arial;
+    font-family:Kriston ITC,Consolas, Arial;
 }
 .qs {
-font-family:QuillineScriptThin,Consolas, Arial;
+    font-family:QuillineScriptThin,Consolas, Arial;
 }
 .f26 {
-font-size:26px;
-letter-spacing:1px;
+    font-size:26px;
+    letter-spacing:1px;
 }
 .f30 {
-font-size:30px;
-letter-spacing:1px;
+    font-size:30px;
+    letter-spacing:1px;
 }
 .f36 {
-font-size:36px;
-letter-spacing:1px;
+    font-size:36px;
+    letter-spacing:1px;
 }
 .f34 {
-font-size:34px;
+    font-size:34px;
 }
 
 nav {
-float:left;
-margin:5px 0 0 20px;
+    float:left;
+    margin:5px 0 0 20px;
 }
 
 hgroup {
-position:absolute;
-width:350px;
-right:0;
-bottom:10px;
+    position:absolute;
+    width:350px;
+    right:0;
+    bottom:10px;
 }
 h1, h2, h3 {
 	text-align:center;
 	margin:20px 20px 0 0;
 }
 h1 {
-height:40px;
-line-height:40px;
-margin-top:10px;
-font-weight:bold;
+    height:40px;
+    line-height:40px;
+    margin-top:10px;
+    font-weight:bold;
 }
 h2, h3 {
-height:30px;
-line-height:30px;
-margin-top:10px;
+    height:30px;
+    line-height:30px;
+    margin-top:10px;
 }
 
 h2 {
-color:#bbb
+    color:#bbb
 }
 h3 {
-color:#f36;
+    color:#f36;
 }
 
 section {
-height:100%;
-width: 100%;
-left:0;
-top:0;
-text-align: center;
-position: absolute;
+    height:100%;
+    width: 100%;
+    left:0;
+    top:0;
+    text-align: center;
+    position: absolute;
 }
 
 footer {
-width:100%;
-height:15px;
-line-height:15px;
-position:absolute;
-bottom:0;
-text-align:center;
-color:#fff;
-font-weight:bold;
-text-shadow:0 0 0 none;
+    width:100%;
+    height:15px;
+    line-height:15px;
+    position:absolute;
+    bottom:0;
+    text-align:center;
+    color:#fff;
+    font-weight:bold;
+    text-shadow:0 0 0 none;
 }
 
 .pic-box {
-height:90px;
-width:90px;
-padding:3px;
-margin:3px;
-background:#fff;
-border:1px solid #FF7777;
-position:absolute;
-z-index:10;
-/* 
-border-radius:5px;
--moz-border-radius:5px; Firefox 3.6 and earlier */
+    height:90px;
+    width:90px;
+    padding:3px;
+    margin:3px;
+    background:#fff;
+    border:1px solid #FF7777;
+    position:absolute;
+    z-index:10;
 
-transition: transform 1s;
--moz-transition: -moz-transform 1s; /* Firefox 4 */
--webkit-transition: -webkit-transform 1s; /* Safari and Chrome */
--o-transition: -o-transform 1s; /* Opera */
+    -moz-transition: -moz-transform 1s; /* Firefox 4 */
+    -webkit-transition: -webkit-transform 1s; /* Safari and Chrome */
+    -o-transition: -o-transform 1s; /* Opera */
+    transition: transform 1s;
 }
 
 .pic-box img {
-width:90px;
-height:90px;
+    width: 90px;
+    height: 90px;
 }
 
 .pic-box:hover, .pic-box.hover {
-transform: rotateY(180deg);
--webkit-transform: rotateY(180deg); /* Safari and Chrome */
--moz-transform: rotateY(180deg); /* Firefox */
--o-transform:rotateY(180deg); /* Opera */
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg); /* Safari and Chrome */
+    -moz-transform: rotateY(180deg); /* Firefox */
+    -o-transform:rotateY(180deg); /* Opera */
 }
 
 .center {
@@ -155,24 +152,25 @@ transform: rotateY(180deg);
     display: block;
     width: 50px;
     height: 50px;
-    margin:200px auto 0;
+    margin: 200px auto 0;
 }
 </style>
 </head>
 <body id="Wrap">
-<nav><img src="asset/img/love/logo.png" alt="Virola Love Eko!" /></nav>
-<hgroup>
-<h1 class="f30">Happy our </h1>
-<h1 class="f30">Love Anniversary !</h1>
-<h3 class="f26">- 7&v -</h3>
-<h2 class="f26 qs">2011.7.7</h2>
-</hgroup>
-<section>
-<span class="loading center"><img src="asset/img/loading.gif" /></span>
-</section>
-<footer>
-&copy;2012. Virola
-</footer>
+    <nav><img src="asset/img/love/logo.png" alt="Virola Love Eko!" /></nav>
+    <hgroup>
+        <h1 class="f30">Happy our </h1>
+        <h1 class="f30">Love Anniversary !</h1>
+        <h3 class="f26">- 7&v -</h3>
+        <h2 class="f26 qs">2011.7.7</h2>
+    </hgroup>
+    <section>
+        <span class="loading center"><img src="asset/img/loading.gif" /></span>
+    </section>
+
+    <footer>
+    &copy;2012-2013. Virola
+    </footer>
 
 <script type="text/javascript" src="asset/lib.js"></script>
 <script type="text/javascript">
@@ -405,10 +403,6 @@ window.onresize = function( ) {
 
 </script>
 
-<script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F39e6a54216ca63d253b34675c50b7fac' type='text/javascript'%3E%3C/script%3E"));
-</script>
-
+<script src="/asset/statics.js"></script>
 </body>
 </html>
