补充一些文件

--- a/virola-eko/index.html
+++ b/virola-eko/index.html
@@ -10,19 +10,23 @@
     <script src="dep/html5shiv.js"></script>
 </head>
 <body id="wrap">
+
 <nav>
+
     <ul class="krl">
         <li><a href="#">7&amp;V Love</a><span class="break">~</span></li>
         <li><a href="#">My Minds</a><span class="break">~</span></li>
         <li><a href="#">Your Eyes</a><span class="break">~</span></li>
         <li><a href="blog/">Our Memories</a></li>
     </ul>
+
     <ul class="f20 krl">
-        <li><a href="loveday.html">Love Day</a><span class="break">~</span></li>
+        <li><a href="loveday2013.html">Love Day</a><span class="break">~</span></li>
         <li><a href="canvas.html">Canvas</a><span class="break">~</span></li>
         <li><a href="map/">Map</a></li>
     </ul>
 </nav>
+
 <div id="main">
     <div class="logo"></div>
 
