--- a/virola-eko/loveday.html
+++ b/virola-eko/loveday.html
@@ -172,7 +172,7 @@ footer {
     &copy;2012-2013. Virola
     </footer>
 
-<script type="text/javascript" src="asset/lib.js"></script>
+<script type="text/javascript" src="src/lib.js"></script>
 <script type="text/javascript">
 
 //( function() {
