update my homepage

--- a/virola-eko/index.html
+++ b/virola-eko/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="asset/css/index.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <!-- /* dep files */ -->
+    <link rel="stylesheet" href="dep/font-awesome-4.0.3/css/font-awesome.css" />
+
+    <!-- IE html5 tags supported -->
     <script src="dep/html5shiv.js"></script>
 </head>
 <body id="wrap">
@@ -14,24 +18,25 @@
 <nav>
 
     <ul class="krl">
-        <li><a href="#">7&amp;V Love</a><span class="break">~</span></li>
+        <li><a href="loveday.html"><i class="fa fa-heart"></i>&nbsp;7&amp;V Love</a><span class="break">~</span></li>
         <li><a href="#">My Minds</a><span class="break">~</span></li>
         <li><a href="#">Your Eyes</a><span class="break">~</span></li>
-        <li><a href="blog/">Our Memories</a></li>
+        <li><a href="notes/"><i class="fa fa-book"></i>&nbsp;Our Memories</a></li>
     </ul>
 
     <ul class="f20 krl">
-        <li><a href="loveday2013.html">Love Day</a><span class="break">~</span></li>
-        <li><a href="canvas.html">Canvas</a><span class="break">~</span></li>
-        <li><a href="map/">Map</a></li>
+        <li><a href="loveday2013.html"><i class="fa fa-youtube-play"></i>&nbsp;Love Day</a><span class="break">~</span></li>
+        <li><a href="canvas.html"><i class="fa fa-picture-o"></i>&nbsp;Canvas</a><span class="break">~</span></li>
+        <li><a href="map/"><i class="fa fa-map-marker"></i>&nbsp;Map</a></li>
     </ul>
 </nav>
 
 <div id="main">
     <div class="logo"></div>
 
-    <article>
-        <hgroup><h1>Virola</h1></hgroup>
+    <article class="center-content">
+
+        <h1><i class="fa fa-heart-o fa-2"></i>&nbsp;Virola</h1>
         <dl>
             <dt>Born in 1990</dt>
             <dd>Gemini</dd>
@@ -43,10 +48,19 @@
             <dd>Travel, Music, RPG games</dd>
         </dl>
     </article>
+    <div class="center-content">
+        <i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>&nbsp;<i class="fa fa-pagelines"></i>
+    </div>
+    <article class="center-content">
+        <h1><i class="fa fa-heart-o fa-2"></i>&nbsp;Eko</h1>
+        <dl>
+            <dd>He is lazy... :D</dd>
+        </dl>
+    </article>
 </div>
 
 <footer id="footer">
-&copy;2013. Virola
+&copy;2013. Virola&nbsp;<i class="fa fa-smile-o"></i>
 </footer>
 
 <script src="asset/statics.js"></script>
