update homepage & add jq plugins to Quicksort

--- a/virola-eko/index.html
+++ b/virola-eko/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Virola&amp;Eko 's Love Island</title>
     <meta name="author" content="Virola" />
-    <link rel="stylesheet" href="asset/css/index.css" />
+    <link rel="stylesheet" href="asset/css/index.css?_v=20131126" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <!-- /* dep files */ -->
@@ -18,7 +18,7 @@
 <nav>
 
     <ul class="krl">
-        <li><a href="loveday.html"><i class="fa fa-heart"></i>&nbsp;7&amp;V Love</a><span class="break">~</span></li>
+        <li><a href="loveday.html?_v=20131126"><i class="fa fa-heart"></i>&nbsp;7&amp;V Love</a><span class="break">~</span></li>
         <li><a href="#">My Minds</a><span class="break">~</span></li>
         <li><a href="#">Your Eyes</a><span class="break">~</span></li>
         <li><a href="notes/"><i class="fa fa-book"></i>&nbsp;Our Memories</a></li>
@@ -31,7 +31,7 @@
     </ul>
 </nav>
 
-<div id="main">
+<section id="main">
     <div class="logo"></div>
 
     <article class="center-content">
@@ -46,6 +46,8 @@
             <dd>Maybe also a Otaku, a little~</dd>
             <dt>Broad interests</dt>
             <dd>Travel, Music, RPG games</dd>
+            <dt>Online</dt>
+            <dd><a target="_blank" href="http://weibo.com/wendy0530"><i class="fa fa-weibo"></i></a>&nbsp;<a target="_blank" href="http://github.com/virola"><i class="fa fa-github-alt"></i></a></dd>
         </dl>
     </article>
     <div class="center-content">
@@ -57,7 +59,40 @@
             <dd>He is lazy... :D</dd>
         </dl>
     </article>
-</div>
+</section>
+
+<section id="things" class="things">
+    <div class="box-model">
+        <article class="box">
+            <figure>
+                <a target="_blank" href="https://build.phonegap.com/apps/542473/install">
+                    <figcaption>My first Phonegap App&nbsp;<i class="fa fa-android"></i>&nbsp;</figcaption>
+                    <img src="http://phonegap.com/css/images/graphic_build_bot.png">
+                </a>
+            </figure>
+            <p>
+                <a href="https://github.com/virola/app-radar"><i class="fa fa-github"></i>&nbsp;github</a>
+            </p>
+            
+        </article>
+
+        <article class="box">
+            <figure>
+                <a href="/topic/quicksort/quicksort.html">
+                    <figcaption>Quicksort Javascript App Test&nbsp;<i class="fa fa-code"></i>&nbsp;</figcaption>
+                    <img src="/topic/quicksort/asset/quicksort.jpg">
+                </a>
+            </figure>
+        </article>
+    </div>
+</section>
+
+
+<section id="regards" class="regards center-content">
+    <h2>Here the regards for your visit!</h2>
+    <div class="heart"></div>
+</section>
+
 
 <footer id="footer">
 &copy;2013. Virola&nbsp;<i class="fa fa-smile-o"></i>
