--- a/virola-eko/loveday.html
+++ b/virola-eko/loveday.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Happy Virola&Eko's Love Anniversary</title>
+<title>Happy Virola&amp;Eko's Love Anniversary</title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
 <script type="text/javascript" src="asset/ie.js"></script>
