--- a/virola-eko/index.html
+++ b/virola-eko/index.html
@@ -21,7 +21,7 @@
         <li><a href="loveday.html?_v=20131126"><i class="fa fa-heart"></i>&nbsp;7&amp;V Love</a><span class="break">~</span></li>
         <li><a href="#">My Minds</a><span class="break">~</span></li>
         <li><a href="#">Your Eyes</a><span class="break">~</span></li>
-        <li><a href="notes/"><i class="fa fa-book"></i>&nbsp;Our Memories</a></li>
+        <li><a href="http://virolablog.duapp.com/notes/" target="_blank"><i class="fa fa-book"></i>&nbsp;Our Memories</a></li>
     </ul>
 
     <ul class="f20 krl">
@@ -95,7 +95,7 @@
 
 
 <footer id="footer">
-&copy;2013. Virola&nbsp;<i class="fa fa-smile-o"></i>
+&copy;2014. Virola&nbsp;<i class="fa fa-smile-o"></i>
 </footer>
 
 <script src="asset/statics.js"></script>
