update for mobile

--- a/virola-eko/index.html
+++ b/virola-eko/index.html
@@ -4,7 +4,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Virola&amp;Eko 's Love Island</title>
     <meta name="author" content="Virola" />
-    <link rel="stylesheet" href="asset/css/index.css?_v=20131126" />
+    <meta name="viewport" id="vp" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
+    <meta name="viewport" id="vp" content="initial-scale=1.0,user-scalable=no,maximum-scale=1">
+
+    <link rel="stylesheet" href="src/css/index.less?_v=20131126" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <!-- /* dep files */ -->
