--- a/virola-eko/index.bak.html
+++ b/virola-eko/index.bak.html
@@ -7,7 +7,7 @@
     <meta name="viewport" id="vp" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
     <meta name="viewport" id="vp" content="initial-scale=1.0,user-scalable=no,maximum-scale=1">
 
-    <link rel="stylesheet" href="asset/css/index.css?_v=20140411" />
+    <link rel="stylesheet" href="src/css/index.less?_v=20140411" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <!-- /* dep files */ -->
