--- a/virola-eko/index.html
+++ b/virola-eko/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" id="vp" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
     <meta name="viewport" id="vp" content="initial-scale=1.0,user-scalable=no,maximum-scale=1">
 
-    <link rel="stylesheet" href="asset/css/index.css?_v=20140411" />
+    <link rel="stylesheet" href="src/css/index.less?_v=20140811" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <!-- /* dep files */ -->
-    <link rel="stylesheet" href="dep/font-awesome-4.0.3/css/font-awesome.css" />
+    <link rel="stylesheet" href="dep/font-awesome-4.0.3/css/font-awesome.min.css" />
 
     <!-- IE html5 tags supported -->
     <script src="dep/html5shiv.js"></script>
@@ -44,7 +44,7 @@
             <dt>Born in 1990</dt>
             <dd>Gemini</dd>
             <dt>FE</dt>
-            <dd>At Baidu</dd>
+            <dd><del>At Baidu</del></dd>
             <dt>Outgoing</dt>
             <dd>Maybe also a Otaku, a little~</dd>
             <dt>Broad interests</dt>
